# trendcash

./: .coverage  .env.example  .env.example.new  .gitignore  DESIGN.md  README.md  TESTING.md  design_audit.md  package-lock.json  package_old.json  postcss.config.js  pyproject.toml  requirements.txt  stitch_creator.html  stitch_dashboard.html  stitch_settings.html  tailwind.config.js  vercel.json  walkthrough.md  walkthrough2.md
.github/workflows/: ci.yml
.playwright-mcp/: page-2026-04-02T05-14-37-632Z.yml
api/: index.py
app/: ai_writer.py  app.py  auth.py  cache.py  crypto_old.py  db.py  db_turso.py  db_turso_old.py  errors.py  logging_config.py  migrations.py  publisher.py  schema.py  security_old.py  sites_old.py  source_fetcher.py  tasks.py  trends_api.py
app/static/: style.css
app/static/src/: input.css
app/templates/: base.html  change_password.html  draft_edit.html  drafts.html  index.html  login.html  metrics.html  posts.html  publish.html  qc.html  selection.html  settings.html  site_form.html  site_index.html  site_post.html  sites.html  sources.html  trend_discovery.html  trends.html
backup/20260403_191753/: api_index_new.py  app_app.py  app_app_new.py  app_auth_new.py  app_crypto_new.py  app_database.py  app_security_new.py  app_sites_new.py  package_new.json  requirements-dev.txt  requirements-dev_new.txt  requirements.txt  requirements_new.txt  vercel_new.json
data/: sample_trends.csv
external_site_template/: README.md  app.py
external_site_template/templates/: index.html  post.html
scripts/: fetch_trends.py  import_trends.py  migrate.py
tests/: conftest.py  test_ai_writer.py  test_db.py  test_routes.py
